--- a/package.json
+++ b/package.json
@@ -15,8 +15,17 @@
     },
     "dependencies": {
         "@types/express": "^5.0.6",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/mongoose": "^5.11.96",
+        "@types/multer": "^2.0.0",
+        "csv-parser": "^3.2.0",
         "dotenv": "^17.2.3",
+        "exceljs": "^4.4.0",
         "express": "^5.2.1",
-        "mongoose": "^9.0.0"
+        "jsonwebtoken": "^9.0.3",
+        "moment": "^2.30.1",
+        "mongoose": "^9.0.0",
+        "multer": "^2.0.2",
+        "node-cron": "^4.2.1"
     }
 }
