--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
+        "@types/bcrypt": "^6.0.0",
         "@types/cors": "^2.8.19",
         "typescript": "^5.9.3"
     },
@@ -19,6 +20,7 @@
         "@types/jsonwebtoken": "^9.0.10",
         "@types/mongoose": "^5.11.96",
         "@types/multer": "^2.0.0",
+        "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
         "csv-parser": "^3.2.0",
         "dotenv": "^17.2.3",
