--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "dev": "npx tsc -b && node ./dist/index.js"
+        "dev": "npx tsc -b && node ./dist/index.js",
+        "build": "tsc -b",
+        "start": "node dist/index.js"
     },
     "keywords": [],
     "author": "",
@@ -20,7 +22,7 @@
         "@types/jsonwebtoken": "^9.0.10",
         "@types/mongoose": "^5.11.96",
         "@types/multer": "^2.0.0",
-        "bcrypt": "^6.0.0",
+        "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "csv-parser": "^3.2.0",
         "dotenv": "^17.2.3",
