--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
-        "@types/bcrypt": "^6.0.0",
+        "@types/bcryptjs": "^2",
         "@types/cors": "^2.8.19",
         "typescript": "^5.9.3"
     },
