--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "devDependencies": {
         "@types/bcryptjs": "^2",
         "@types/cors": "^2.8.19",
+        "@types/nodemailer": "^7.0.4",
         "typescript": "^5.9.3"
     },
     "dependencies": {
@@ -32,6 +33,7 @@
         "moment": "^2.30.1",
         "mongoose": "^9.0.0",
         "multer": "^2.0.2",
-        "node-cron": "^4.2.1"
+        "node-cron": "^4.2.1",
+        "nodemailer": "^7.0.12"
     }
 }
