--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "express": "^5.2.1",
         "jsonwebtoken": "^9.0.3",
         "moment": "^2.30.1",
+        "moment-timezone": "^0.6.0",
         "mongoose": "^9.0.0",
         "multer": "^2.0.2",
         "node-cron": "^4.2.1",
